        #<C-CHORD #x302005ABE27D>
        PW ? (notes *value*)
        (#<C-NOTE #x302005ABE64D> #<C-NOTE #x302005ABE59D>
         #<C-NOTE #x302005ABE4ED> #<C-NOTE #x302005ABE43D>
         #<C-NOTE #x302005ABE38D> #<C-NOTE #x302005ABE2DD>)
        PW ? (ask-all (notes *value*) 'midic)
        (2000 2400 2700 3800 6000 8700)
        PW ?

- Redirection to the Listener window is corrected.


Bugs remaining in patchwork-10.1-0.838-ccl-1.11_r16635_darwinx8664-darwin-apple-10.12.4-x86-64:

- instance drawing doesn't occur (threads?) (moving, growing boxes).
- also: lines don't draw (threads?)



10.0-0.607
-----------------------

- Corrected multi-bpf and bpf-lib crashes.
- Implemented pop-up menus.
- Made use of the Maestro font instead of Mus-Not-j, corrected chord-box displaying.
- Added (interlock subs-posn group-list first-n last-n) to Kernel/List menu.
- Corrected origin of line when click-and-dragging from the output box.
- Implemented TextEdit, editable-text-dialog-item.
  Still need some graphic adjustments, and some integration debugging.


10.0-0.714
-----------------------

- Corrected the PW-USER logical host translations loading.  See PW-USER
  in note 10.0-0.737 below.


10.0-0.717
-----------------------

- Optimized a little loading and display time.
- Added .pwpatch or .midi extensions to saved file names.
- Corrected double window close bug (asked twice whether to save a modified patch window on close).
- Corrected a few internal bugs (all make-array should have a :initial-element, etc).


10.0-0.737
-----------------------

This release let you load an generate MIDI files, using the Common
Lisp MIDI library (from Robert Strandh at Bordeaux), instead of
MidiShare, which is not entirely ported to MacOSX 64-bit yet.

This release uses the new graphic model where MCL view classes don't
have a matching Cocoa NSView class.

The text fields, controls and dialogs are not completed yet.


- PW-USER configured by default as ~/Documents/Patchwork/